[feat] add debug task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -48,7 +48,23 @@
                 "kind": "test",
                 "isDefault": true
             }
-        }
+        },
+        {
+            "label": "debug cpp",
+            "type": "shell",
+            "command": "${fileDirname}\\run.exe",
+            "options": {
+                "cwd": "${fileDirname}"
+            },
+            "dependsOn": [
+                "build cpp"
+            ],
+            "problemMatcher": [],
+            "group": {
+                "kind": "debug",
+                "isDefault": true
+            }
+        },
     ],
     "version": "2.0.0"
 }
