--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
   "clangd.arguments": [
       "--header-insertion=never"
-  ]
+  ],
+  "cmake.configureOnOpen": false,
+  "files.associations": {
+    "iostream": "cpp",
+    "ios": "cpp"
+  }
 }
