--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
   "cmake.configureOnOpen": false,
   "files.associations": {
     "iostream": "cpp",
-    "ios": "cpp"
-  }
+    "ios": "cpp",
+    "deque": "cpp"
+}
 }
